Update policies with recommended language

--- a/index.Rmd
+++ b/index.Rmd
@@ -13,9 +13,13 @@ rog1 AT-SIGN psu PERIOD edu</br>
 [Schedule an appointment](https://doodle.com/mm/rickgilmore/book-a-time)</br>
 Lab site: [gilmore-lab.github.io](http://gilmore-lab.github.io/)</br>
 
-# Teaching Assistant
+# Teaching Assistants
 
-TBD
+Megan Bradson, B.A.</br>
+Graduate Student, Adult Clinical Psychology
+mlb5897 AT-SIGN psu PERIOD edu</br>
+
+Daiqing Zhao</br>
 
 # Meeting time and location
 
