--- a/policies.Rmd
+++ b/policies.Rmd
@@ -8,6 +8,8 @@ knitr::opts_chunk$set(cache = TRUE)
 
 ### Academic Integrity
 
+Students with questions about academic integrity should visit <http://www.la.psu.edu/current-students/undergraduate-students/education/academic-integrity>. 
+
 Penn State defines academic integrity as the pursuit of scholarly activity in an open, honest and responsible manner. All students should act with personal integrity, respect others dignity, rights and property, and help create and maintain an environment in which all can succeed through the fruits of their efforts (Faculty Senate Policy 49-20). Sanctions for academic misconduct can include a grade of F for the course as well as other penalties.
 
 Students are responsible for maintaining academic integrity.  Violations include cheating on exams, talking to others during exams, looking at another student's test materials or answers during an exam, removing exams from the classroom without consent from the instructor, plagiarizing (do not copy from someone else!), and dishonesty in any aspect of course participation.
@@ -70,23 +72,17 @@ For more information regarding the University's policies and procedures for resp
  
 Additionally, I am required to make a report on any reasonable suspicion of child abuse in accordance with the Pennsylvania Child Protective Services Law.
 
-### COVID safety information
+### COVID safety information (last updated 2021-08-12)
 
-Students experiencing any illness and especially COVID-19 related symptoms should not attend class in person. 
-Those students are strongly encouraged to contact a health care provider and their instructor as soon as possible to discuss reasonable accommodations.  
+Please consult the Penn State Covid-19 Dashboard for updates on masking policies, instructional-mode changes, etc. <https://virusinfo.psu.edu/covid-19-dashboard/>.
 
-Students should remain at least six feet away from others in our classroom. 
-Policies require all of us to wear masks appropriately to cover our mouths and noses while we are in our classroom. 
-Students who do not want to distance themselves appropriately or wear a mask during class may not attend class in person. 
-Attending this class without wearing a mask properly constitutes a classroom disruption, a violation of several articles of the student Code of Conduct (https://studentaffairs.psu.edu/support-safety-conduct/student-conduct/code-conduct), and a violation of policy AD 57 (https://policy.psu.edu/policies/ad57). 
-Anyone in the classroom who is not wearing a mask appropriately will be asked to do so or to leave. 
-I am required to end class if anyone refuses this request. 
-Failure to comply may result in a conduct violation. 
-Students who believe they should be granted a health or safety exception to this policy should consult with Student Disability Resources about reasonable accommodations and present their accommodation letter to me if an exception is granted. 
+This class will meet in-person unless there is a change in University policy.
+
+Penn State University requires everyone to wear a face mask in all university buildings, including classrooms, regardless of vaccination status. **ALL STUDENTS MUST** wear a mask appropriately (i.e., covering both your mouth and nose) while you are indoors on campus.  This is to protect your health and safety as well as the health and safety of your classmates, instructor, and the university community. Anyone attending class without a mask will be asked to put one on or leave. Instructors may end class if anyone present refuses to appropriately wear a mask for the duration of class. Students who refuse to wear masks appropriately may face disciplinary action for Code of Conduct violations.  If you feel you cannot wear a mask during class, please speak with your adviser immediately about your options for altering your schedule.
 
 ### Zoom
 	
-I may decide to use Zoom and record lectures to allow students who are unable to attend class in person to participate.
+At some point in the semester, I may decide to use Zoom to allow students who are unable to attend class in person to participate.
 
 While you are on Zoom, keep in mind that this is a classroom environment and others should be treated with respect. 
 Please keep your microphone muted unless you want to ask a question or interact with someone. 
@@ -95,8 +91,3 @@ As an instructor, I personally like to see people’s faces.
 As a participant, I am more involved when I have my camera on. 
 I realize, however, that there are many reasons why you might not want to turn on your camera such as poor internet connection, joining via phone, or other privacy concerns. 
 It is your choice as to whether you would like to have the camera on or not.
-
-**Note that video and audio recordings of class lectures may be part of the classroom activity.**
-
-The video and audio recording is used for educational use/purposes and only may be made available to all students presently enrolled in the class. 
-For purposes where the recordings will be used in future class session/lectures, any type of identifying information will be adequately removed.
