--- a/index.Rmd
+++ b/index.Rmd
@@ -13,10 +13,10 @@ rog1 AT-SIGN psu PERIOD edu</br>
 [Schedule an appointment](https://doodle.com/mm/rickgilmore/book-a-time)</br>
 Lab web site: [gilmore-lab.github.io](http://gilmore-lab.github.io/)</br>
 
-# Teaching Assistants
+# Teaching Assistant
 
 Megan Bradson, B.A.</br>
-Graduate Student, Adult Clinical Psychology
+Graduate Student, Adult Clinical Psychology</br>
 mlb5897 AT-SIGN psu PERIOD edu</br>
 
 # Meeting time and location
