--- a/docs/lectures/260-2021-08-26-history-levels-methods.Rmd
+++ b/docs/lectures/260-2021-08-26-history-levels-methods.Rmd
@@ -269,7 +269,7 @@ J. Lichtman, <https://www.youtube.com/watch?v=nvXuq9jRWKE&feature=youtu.be>
 - Neuroscience shaped by [great debates](http://www.columbia.edu/cu/psychology/courses/1010/mangels/neugiro/history/history.html)
     - Mind == brain debate
     - Are functions local or distributed?
-    - Nature of neural communication
+    - Do neurons connect like pipes or pass info like relay runners?
 - Forms at multiple levels of analysis contribute to function
 
 # Levels of analysis
@@ -289,6 +289,7 @@ J. Lichtman, <https://www.youtube.com/watch?v=nvXuq9jRWKE&feature=youtu.be>
 
 [Sejnowski 2014](http://doi.org/10.1038/nn.3839)
 </div>
+
 
 <!-- --- -->
 
@@ -398,8 +399,8 @@ J. Lichtman, <https://www.youtube.com/watch?v=nvXuq9jRWKE&feature=youtu.be>
 ## Spatial and Temporal Resolution
 
 <div class="centered">
-<a href="http://www.nature.com/neuro/journal/v17/n11/images/nn.3839-F1.jpg">
-<img src="http://www.nature.com/neuro/journal/v17/n11/images/nn.3839-F1.jpg" width="600px">
+<a href="https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fnn.3839/MediaObjects/41593_2014_Article_BFnn3839_Fig1_HTML.jpg?as=webp">
+<img src="https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fnn.3839/MediaObjects/41593_2014_Article_BFnn3839_Fig1_HTML.jpg?as=webp" width="600px">
 </a>
 
 [Sejnowski 2014](http://doi.org/10.1038/nn.3839)
@@ -431,6 +432,10 @@ J. Lichtman, <https://www.youtube.com/watch?v=nvXuq9jRWKE&feature=youtu.be>
 </a>
 </div>
 
+---
+
+- Complete cells, but only 5-10\%
+
 ## [Nissl stain](http://2e.mindsmachine.com/glossary.html#N)
 
 <div class="centered">
@@ -439,11 +444,19 @@ J. Lichtman, <https://www.youtube.com/watch?v=nvXuq9jRWKE&feature=youtu.be>
 </a>
 </div>
 
+---
+
+- Only cell bodies
+- Density of staining ~ cell density/number
+
 ## Retrograde vs. anterograde [histochemical tracers](https://en.wikipedia.org/wiki/Histochemical_tracer)
 
 - Neuron information flow *polarized*--flows in one direction
+    - ≠ electronic wires, but like pipes
 - *Retrograde* (from *axon terminal* to *cell body*); *anterograde* (from cell body to axon terminal)
 - What connects where
+    - inputs to region X
+    - outputs from region X
 
 ## Retrograde vs. anterograde tracers
 
@@ -546,6 +559,7 @@ Lichtman video
 - Reveals tissue density/type differences
 - [Gray matter](https://en.wikipedia.org/wiki/Grey_matter) (neurons & dendrites & axons & glia) vs. [white matter](https://en.wikipedia.org/wiki/White_matter) (mostly axons)
 - MR Spectroscopy
+    - Concentration of specific chemical substances (only some have MR signature)
 - Region sizes/volumes
 
 ## Structural MRI of the brain
@@ -565,21 +579,23 @@ Lichtman video
 ## [Diffusion tensor imaging (DTI)](https://en.wikipedia.org/wiki/Diffusion_MRI#Diffusion_tensor_imaging)
 
 - Type of structural MRI
+- Measures patterns of movement/diffusion of $H_{2}O$
 - Reveals integrity/density of axon fibers
 - Measure of connectivity
 
 ## [Voxel-based morphometry (VBM)](https://en.wikipedia.org/wiki/Voxel-based_morphometry)
 
 - [Voxels (volume-based elements)](https://en.wikipedia.org/wiki/Voxel)
-- Morphometry, measure ("metry") form/morphology.
+- Morphometry, measure ("metry") form/morphology
 - How does brain size or thickness vary by age, disease status, etc.?
 
 ----
 
 <div class="centered">
 <img src="http://www.frontiersin.org/files/Articles/18691/fnhum-06-00184-HTML/image_m/fnhum-06-00184-g003.jpg" height=500px>
-
+<small>
 <http://www.frontiersin.org/files/Articles/18691/fnhum-06-00184-HTML/image_m/fnhum-06-00184-g003.jpg>
+</small>
 </div>
 
 ## Main points
