--- a/lectures/bib/psych260.bib
+++ b/lectures/bib/psych260.bib
@@ -1,4 +1,38 @@
 
+@ARTICLE{Dayan2013-gp,
+  title    = "Noninvasive brain stimulation: from physiology to network
+              dynamics and back",
+  author   = "Dayan, Eran and Censor, Nitzan and Buch, Ethan R and Sandrini,
+              Marco and Cohen, Leonardo G",
+  journal  = "Nature neuroscience",
+  volume   =  16,
+  number   =  7,
+  pages    = "838--844",
+  month    =  jul,
+  year     =  2013,
+  url      = "http://www.nature.com/neuro/journal/v16/n7/full/nn.3422.html",
+  language = "en",
+  issn     = "1097-6256",
+  doi      = "10.1038/nn.3422"
+}
+
+@ARTICLE{Maren2004-uz,
+  title    = "Neuronal signalling of fear memory",
+  author   = "Maren, Stephen and Quirk, Gregory J",
+  journal  = "Nature reviews. Neuroscience",
+  volume   =  5,
+  number   =  11,
+  pages    = "844--852",
+  month    =  nov,
+  year     =  2004,
+  url      = "http://dx.doi.org/10.1038/nrn1535",
+  language = "en",
+  issn     = "1471-003X",
+  pmid     = "15496862",
+  doi      = "10.1038/nrn1535"
+}
+
+
 @INCOLLECTION{De_Pitta2019-ca,
   title     = "A {Neuron--Glial} Perspective for Computational Neuroscience",
   booktitle = "Computational Glioscience",
