--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -45,7 +45,7 @@ title: "Schedule"
     - Watch: [Magnetic Resonance Imaging Explained](https://youtu.be/MiL0wCZr0Mw)
     - Optional: <https://en.wikibooks.org/wiki/Cognitive_Psychology_and_Cognitive_Neuroscience/Behavioural_and_Neuroscience_Methods>
 - Materials
-    - [Slides]()
+    - [Slides](lectures/260-2021-08-31-methods.html)
 
 ### Thursday, September 2
 
