--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,36 @@
 
+@ARTICLE{Begg2013-fb,
+  title    = "The endocrinology of food intake",
+  author   = "Begg, Denovan P and Woods, Stephen C",
+  journal  = "Nature reviews. Endocrinology",
+  volume   =  9,
+  number   =  10,
+  pages    = "584--597",
+  month    =  oct,
+  year     =  2013,
+  url      = "http://dx.doi.org/10.1038/nrendo.2013.136",
+  language = "en",
+  issn     = "1759-5029, 1759-5037",
+  pmid     = "23877425",
+  doi      = "10.1038/nrendo.2013.136"
+}
+
+@ARTICLE{Abbott2006-jw,
+  title    = "Astrocyte-endothelial interactions at the blood-brain barrier",
+  author   = "Abbott, N Joan and R{\"o}nnb{\"a}ck, Lars and Hansson, Elisabeth",
+  journal  = "Nature reviews. Neuroscience",
+  volume   =  7,
+  number   =  1,
+  pages    = "41--53",
+  month    =  jan,
+  year     =  2006,
+  url      = "http://dx.doi.org/10.1038/nrn1824",
+  language = "en",
+  issn     = "1471-003X",
+  pmid     = "16371949",
+  doi      = "10.1038/nrn1824"
+}
+
 @ARTICLE{Dayan2013-gp,
   title    = "Noninvasive brain stimulation: from physiology to network
               dynamics and back",
