--- a/lectures/bib/psych260.bib
+++ b/lectures/bib/psych260.bib
@@ -1,4 +1,21 @@
 
+@ARTICLE{Roy2018-wo,
+  title    = "Toward mapping the human body at a cellular resolution",
+  author   = "Roy, Ananda L and Conroy, Richard S",
+  journal  = "Molecular biology of the cell",
+  volume   =  29,
+  number   =  15,
+  pages    = "1779--1785",
+  month    =  aug,
+  year     =  2018,
+  url      = "http://dx.doi.org/10.1091/mbc.E18-04-0260",
+  language = "en",
+  issn     = "1059-1524, 1939-4586",
+  pmid     = "30058989",
+  doi      = "10.1091/mbc.E18-04-0260",
+  pmc      = "PMC6085824"
+}
+
 @ARTICLE{Begg2013-fb,
   title    = "The endocrinology of food intake",
   author   = "Begg, Denovan P and Woods, Stephen C",
