--- a/lectures/260-2021-08-26-history-levels-methods.Rmd
+++ b/lectures/260-2021-08-26-history-levels-methods.Rmd
@@ -14,6 +14,13 @@ output:
   github_document: default
 ---
 
+```{r, echo=FALSE}
+knitr::opts_chunk$set(
+  fig.align = "center",
+  echo=FALSE
+)
+```
+
 ## Prelude (9:01)
 
 <iframe width="420" height="315" src="https://www.youtube.com/embed/0fKBhvDjuy0" frameborder="0" allowfullscreen></iframe>
