--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -129,7 +129,7 @@ title: "Schedule"
 - Assignments
     - Read W&B 3:70-75
 - Materials
-    - [Slides]()
+    - [Slides](lectures/260-2021-09-28-cells-III.html). [PDF](lectures/260-2021-09-28-cells-III.pdf).
 
 ### Thursday, September 30
 
