--- a/lectures/bib/psych260.bib
+++ b/lectures/bib/psych260.bib
@@ -1,4 +1,22 @@
 
+@ARTICLE{Haucke2011-ub,
+  title    = "Protein scaffolds in the coupling of synaptic exocytosis and
+              endocytosis",
+  author   = "Haucke, Volker and Neher, Erwin and Sigrist, Stephan J",
+  journal  = "Nature reviews. Neuroscience",
+  volume   =  12,
+  number   =  3,
+  pages    = "127--138",
+  month    =  mar,
+  year     =  2011,
+  url      = "http://dx.doi.org/10.1038/nrn2948",
+  language = "en",
+  issn     = "1471-003X, 1471-0048",
+  pmid     = "21304549",
+  doi      = "10.1038/nrn2948"
+}
+
+
 @ARTICLE{Roy2018-wo,
   title    = "Toward mapping the human body at a cellular resolution",
   author   = "Roy, Ananda L and Conroy, Richard S",
@@ -2346,6 +2364,7 @@ View full text},
   year={2007},
   publisher={Elsevier}
 }
+
 @article{javitt2010glutamatergic,
   title={Glutamatergic theories of schizophrenia},
   author={Javitt, Daniel C},
@@ -2355,6 +2374,7 @@ View full text},
   pages={4},
   year={2010}
 }
+
 @article {GLIA:GLIA10,
 author = {Anderson, Christopher M. and Swanson, Raymond A.},
 title = {Astrocyte glutamate transport: Review of properties, regulation, and physiological functions},
