--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -2355,6 +2355,49 @@ View full text},
 	pages = {4374--4379}
 }
 
+@ARTICLE{Malgorzata2020-nz,
+  title    = "Glutamatergic dysregulation in mood disorders: opportunities for
+              the discovery of novel drug targets",
+  author   = "Ma{\l}gorzata, Panek and Pawe{\l}, Kawalec and Iwona, Malinowska
+              Lipie{\'n} and Brzostek, Tomasz and Andrzej, Pilc",
+  journal  = "Expert opinion on therapeutic targets",
+  volume   =  24,
+  number   =  12,
+  pages    = "1187--1209",
+  month    =  dec,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1080/14728222.2020.1836160",
+  keywords = "Depression; NMDA; antidepressant; glutamate; glutamatergic
+              system; mood disorders",
+  language = "en",
+  issn     = "1472-8222, 1744-7631",
+  pmid     = "33138678",
+  doi      = "10.1080/14728222.2020.1836160"
+}
+
+@ARTICLE{McCutcheon2020-ez,
+  title    = "Dopamine and glutamate in schizophrenia: biology, symptoms and
+              treatment",
+  author   = "McCutcheon, Robert A and Krystal, John H and Howes, Oliver D",
+  journal  = "World psychiatry: official journal of the World Psychiatric
+              Association",
+  volume   =  19,
+  number   =  1,
+  pages    = "15--33",
+  month    =  feb,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1002/wps.20693",
+  keywords = "D1 receptors; D2 receptors; GABA interneurons; NMDA receptors;
+              Psychosis; amphetamine; antipsychotics; cognitive symptoms;
+              dopamine; dorsolateral prefrontal cortex; glutamate; ketamine;
+              schizophrenia; striatum",
+  language = "en",
+  issn     = "1723-8617",
+  pmid     = "31922684",
+  doi      = "10.1002/wps.20693",
+  pmc      = "PMC6953551"
+}
+
 @article{arrang2007histamine,
   title={Histamine and schizophrenia},
   author={Arrang, Jean-Michel},
