--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,24 @@
 
+@ARTICLE{Hastoy2017-it,
+  title    = "Fusion pore in exocytosis: More than an exit gate? A $\beta$-cell
+              perspective",
+  author   = "Hastoy, Benoit and Clark, Anne and Rorsman, Patrik and Lang,
+              Jochen",
+  journal  = "Cell calcium",
+  volume   =  68,
+  pages    = "45--61",
+  month    =  dec,
+  year     =  2017,
+  url      = "http://dx.doi.org/10.1016/j.ceca.2017.10.005",
+  keywords = "Insulin; Islets; SNAREs; Synaptobrevin; Transmembrane domains;
+              Type 2 diabetes",
+  language = "en",
+  issn     = "0143-4160, 1532-1991",
+  pmid     = "29129207",
+  doi      = "10.1016/j.ceca.2017.10.005"
+}
+
+
 @ARTICLE{Haucke2011-ub,
   title    = "Protein scaffolds in the coupling of synaptic exocytosis and
               endocytosis",
