--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,21 @@
 
+@ARTICLE{Deussing2018-ub,
+  title    = "The {Corticotropin-Releasing} Factor Family: Physiology of the
+              Stress Response",
+  author   = "Deussing, Jan M and Chen, Alon",
+  journal  = "Physiological reviews",
+  volume   =  98,
+  number   =  4,
+  pages    = "2225--2286",
+  month    =  oct,
+  year     =  2018,
+  url      = "http://dx.doi.org/10.1152/physrev.00042.2017",
+  language = "en",
+  issn     = "0031-9333, 1522-1210",
+  pmid     = "30109816",
+  doi      = "10.1152/physrev.00042.2017"
+}
+
 @ARTICLE{Hastoy2017-it,
   title    = "Fusion pore in exocytosis: More than an exit gate? A $\beta$-cell
               perspective",
