--- a/docs/lectures/bib/psych260.bib
+++ b/docs/lectures/bib/psych260.bib
@@ -1,4 +1,22 @@
 
+@ARTICLE{Miller2021-lb,
+  title    = "Public acceptance of evolution in the United States, 1985-2020",
+  author   = "Miller, Jon D and Scott, Eugenie C and Ackerman, Mark S and
+              Laspra, Bel{\'e}n and Branch, Glenn and Polino, Carmelo and
+              Huffaker, Jordan S",
+  journal  = "Public understanding of science",
+  pages    = "9636625211035919",
+  month    =  aug,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1177/09636625211035919",
+  keywords = "United States; biology/evolution; public acceptance; structural
+              equation model; time series",
+  language = "en",
+  issn     = "0963-6625, 1361-6609",
+  pmid     = "34396821",
+  doi      = "10.1177/09636625211035919"
+}
+
 @ARTICLE{Deussing2018-ub,
   title    = "The {Corticotropin-Releasing} Factor Family: Physiology of the
               Stress Response",
