--- a/lectures/260-2021-09-30-neurochem-I.Rmd
+++ b/lectures/260-2021-09-30-neurochem-I.Rmd
@@ -134,7 +134,7 @@ knitr::include_graphics("https://media.springernature.com/full/springer-static/i
 - Amplitude scales with # of receptors activated
 - Number of receptors activated ~ # of vesicles released
 
-## Postsynpatic potential types
+## Postsynaptic potential types
 
 - *Excitatory PSPs (EPSPs)*
     + Depolarize neuron (make more +)
